tests/io/outputs/collections_compile.out
:generateGrammarSource UP-TO-DATE
:compileJava UP-TO-DATE
:processResources NO-SOURCE
:classes UP-TO-DATE
:ljwrappers:compileJava UP-TO-DATE
:ljwrappers:processResources NO-SOURCE
:ljwrappers:classes UP-TO-DATE
:copyWrappers UP-TO-DATE
:runline 1:6 extraneous input '"enter 3 space-separated words\n"' expecting ')'
line 2:0 missing '{' at 'a'
line 4:0 missing '}' at '<EOF>'
generated/Main.java:16: error: method print in class Main cannot be applied to given types;
        print("%s\n", a);
        ^
  required: no arguments
  found: String,LJList<String>
  reason: actual and formal argument lists differ in length
1 error


BUILD SUCCESSFUL

